# KGCL

./: .gitignore  AGENTS.md  README.md  canonicalize_prod.py  eval-full.py  eval-rtacc.py  eval.py  prepare_data.py  preprocess.py  pyproject.toml  requirements-cuda.txt  train.py
.github/workflows/: cuda-runtime.yml  lightweight-tests.yml
KGCL-main/: AGENTS.md  README.md  eval-full.py  eval-rtacc.py  eval.py  prepare_data.py  preprocess.py  train.py
KGCL-main/configs/: README.md  default.yaml
KGCL-main/configs/examples/: minimal_train.yaml
KGCL-main/docs/: architecture.md  configuration.md
KGCL-main/models/: KGCL.py  __init__.py  beam_search.py
KGCL-main/src/kgcl/: __init__.py
KGCL-main/src/kgcl/config/: loader.py  schema.py  validation.py
KGCL-main/tests/smoke/: test_imports.py
KGCL-main/tests/unit/: test_config.py
KGCL-main/utils/: mol_features.py
configs/: README.md  default.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  architecture.md  configuration.md
kgcl/: __init__.py
models/: KGCL.py  __init__.py  beam_search.py
src/kgcl/chemistry/: edit_application.py
src/kgcl/cli/: canonicalize.py  entrypoints.py  evaluate.py  evaluate_full.py  evaluate_round_trip.py  help.py  prepare_data.py  preprocess.py  train.py
src/kgcl/config/: __init__.py  device.py  loader.py  paths.py  schema.py  validation.py
src/kgcl/data/: __init__.py  canonicalization.py  preparation.py  preprocessing.py
src/kgcl/evaluation/: __init__.py  common.py  exact_match.py  full.py  round_trip.py  standard.py
src/kgcl/models/: __init__.py
src/kgcl/resources/: functional_groups.py
src/kgcl/training/: __init__.py  checkpointing.py  context.py  engine.py  objectives.py  runner.py
src/models/: __init__.py  encoder.py
src/utils/: attn_layer.py  collate_fn.py  rxn_graphs.py
tests/compatibility/: test_binary_assets.py  test_repository_structure.py  test_resources.py
tests/cuda/: test_checkpoint_restore.py  test_minimal_inference.py  test_model_device.py  test_no_cpu_fallback.py
tests/fixtures/: binary-assets.sha256
tests/runtime/: test_checkpoint_loading.py  test_cuda_bootstrap.py  test_evaluation_setup.py  test_historical_imports.py  test_runtime_resources.py  test_training_setup.py
tests/smoke/: test_imports.py  test_wrappers.py
tests/unit/: test_command_defaults.py  test_config.py  test_config_regressions.py  test_cuda_device.py  test_device.py  test_document_structure.py  test_evaluation_spec.py  test_functional_group_resolver.py  test_lightweight_cli.py  test_nested_config.py  test_paths_extended.py  test_paths_resources.py  test_preparation_vocab_loading.py  test_preprocessing_validation.py  test_resource_cache.py  test_resource_context.py  test_scoped_validation.py
utils/: ADNCE.py  __init__.py  rxn_graphs.py
