[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgcl"
version = "0.1.0"
description = "KGCL retrosynthesis workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "build", "ruff"]
runtime = [
  "numpy==1.26.4",
  "pandas",
  "joblib",
  "tqdm",
  "torch==2.2.2",
  "rdkit==2024.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kgcl*", "models*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
kgcl-train = "kgcl.cli.train:main"
kgcl-preprocess = "kgcl.cli.preprocess:main"
kgcl-prepare-data = "kgcl.cli.prepare_data:main"
kgcl-eval = "kgcl.cli.evaluate:main"
kgcl-eval-full = "kgcl.cli.evaluate_full:main"
kgcl-eval-rtacc = "kgcl.cli.evaluate_round_trip:main"
kgcl-canonicalize = "kgcl.cli.canonicalize:main"

